[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "black>=25.1.0",
    "fairlearn>=0.12.0",
    "ipywidgets>=8.1.7",
    "mcp",
    "witwidget>=1.8.1",
]
