[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.11,<3.12"   # <-- change from >=3.13
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
  "mcp>=1.13.0",
  "aequitas==0.42.0",
  "pandas==2.1.4",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "pyarrow>=14,<18",
]
